# f___-efs

./: .env  .gitignore  .gitmodules  Cargo.toml  README.md  fefs_config.json  log.txt
src/: lib.rs  main.rs
src/client/: configuration.rs  mod.rs  process.rs
src/message/: mod.rs
src/server/: mod.rs
static/: index.html
static/css/: style.css
static/js/: main.js
