[package]
name = "fefs"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[lib]
name = "lib"
path = "src/lib.rs"

[dependencies]
actix-files = "0.6.6"
actix-web = "4.9.0"
env_logger = "0.11.5"
log = "0.4.22"
tokio = { version = "1.41.1", features = ["full"] }
